fix(modal) add wordwrap to header title (#794)
* feat(select): integrate select with tags

* fix(modal): add header overflow

* fix(modal): remove console log

--- a/packages/modal/src/styles/Modal.module.css
+++ b/packages/modal/src/styles/Modal.module.css
@@ -58,6 +58,7 @@
   line-height: 1.2;
   font-weight: var(--lp-font-weight-semibold);
   margin: 0;
+  overflow-wrap: anywhere;
 }
 
 .headerIcon {
